添加服务检查脚本